# ansible-homelab-system

./: .ansible-lint.yml  .gitignore  .yamllint.yml  README.md  ansible.cfg  galaxy_requirements.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: 00_setup.yml
playbooks/: configure_linux_debian.yml  configure_linux_redhat.yml  configure_windows_common.yml  configure_windows_server-2k25.yml  package_full_upgrade.yml  ping.yml  win_ping.yml
