[project]
name = "ansible-homelab-system"
description = "Ansible Playbooks to configure system in my homelab"
authors = [
  {name = 'KOSHIKAWA Kenichi'},
]
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  'ansible==11.9.0',
  'selinux==0.3.0',
  'ansible-lint==25.8.1',
  'yamllint==1.37.1',
]
